レスポンシブ対応

--- a/app/styles/quiz.scss
+++ b/app/styles/quiz.scss
@@ -1,29 +1,4 @@
-$viewport: 1240;
-
-@function vw($num, $width: $viewport) {
-    @return (1vw * $num / $width * 100);
-}
-
-:root {
-    --color-key: #A5EBDC;
-    --color-accent: #BDB5E4;
-    --color-1: #FF97C3;
-    --color-2: #A3FFF5;
-    --color-3: #CDC2FF;
-    --color-4: #FAFFBE;
-    --blur-1-size: clamp(100px, 30vw, 40vw);
-    --blur-2-size: clamp(300px, 50vw, 50vw);
-    --blur-3-size: clamp(200px, 35vw, 35vw);
-    --blur-4-size: clamp(200px, 30vw, 30vw);
-    --blur-amount: clamp(40px, 5vw, 90px);
-}
-
-
-body {
-    color: #222;
-    margin: 0;
-    padding: 0;
-}
+@import "_mixin";
 
 .bgGradation {
     position: fixed;
@@ -86,21 +61,6 @@ body {
     }
 }
 
-
-main {
-    text-align: center;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p {
-    margin: .3em 0;
-}
-
 h1 {
     font-weight: 900;
 }
@@ -110,12 +70,24 @@ p {
 }
 
 header {
-    margin-top: vw(15);
+    padding: vw(50) vw(40) 0;
+    @include media(tablet){
+        padding: vw(15) 0 0;
+    }
+}
+
+.container {
+    position: relative;
+    z-index: 1;
 }
 
 .text {
     &-subhead {
-        font-size: vw(28);
+        font-size: vw(60);
+        @include media(tablet){
+            font-size: vw(28);
+        }
+        
         font-weight: 700;
         letter-spacing: 0;
         line-height: 1.2;
@@ -125,31 +97,36 @@ header {
     }
 
     &-outline {
-        font-size: vw(54);
+        font-size: vw(108);
+        @include media(tablet){
+            font-size: vw(54);
+        }
         letter-spacing: 0;
         color: transparent;
-        line-height: 1.2;
-        color: #fff; //e4ddb3
+        line-height: 1.1;
+        color: #fff;
         -webkit-text-stroke: 1px #000;
         // text-stroke: 1px #000;
         opacity: 0;
         margin-bottom: 0;
+        margin-top: 0.8em;
     }
 
     &-guide {
-        font-size: vw(18);
+        font-size: vw(32);
+        @include media(tablet){
+            font-size: vw(18);
+        }
     }
 
     &-dropguide {
         color: #a6a6a6;
-        font-size: vw(26);
+        font-size: vw(48);
+        @include media(tablet){
+            font-size: vw(26);
+        }
         opacity: 0.3;
     }
-}
-
-.container {
-    position: relative;
-    z-index: 1;
 }
 
 .quizBox {
@@ -159,44 +136,66 @@ header {
     .dropBox,
     .finishBox {
         background: rgba(255, 255, 255, .7);
-        padding: vw(20);
+        padding: vw(60);
+        min-height: 60vh;
+        @include media(tablet){
+            padding: vw(20);
+            max-height: 47vh;
+            height: 40vw;
+        }
         align-items: center;
-        max-height: 47vh;
-        height: 40vw;
         transition: opacity .3s;
         border-radius: 8px;
         border: 1px solid #efefef;
 
         h1 {
-            font-size: vw(32);
+            font-size: vw(64);
+            @include media(tablet){
+                font-size: vw(32);
+            }
         }
     }
 
     .pager {
         position: absolute;
         right: vw(20);
-        font-size: vw(30);
+
+        font-size: vw(50);
+        @include media(tablet){
+            padding: vw(30);
+        }
         font-weight: 600;
         color: #aaa;
     }
 
     .answerBtnWrap {
-        transform: translateY(vw(-90));
+        transform: translateY(vw(-170));
+        @include media(tablet){
+            transform: translateY(vw(-90));
+        }
         .answerBtn {
             position: absolute;
-            // transform: translate(0, -50%);
-            left: calc(50% - vw(90));
+            left: calc(50% - vw(170));
+            @include media(tablet){
+                left: calc(50% - vw(90));
+            }
         }
 
         .answerBtn-draggable-1,
         .answerBtn-draggable-8 {
-            left: vw(260);
+            left: vw(130);
+            @include media(tablet){
+                left: vw(260);
+            }
         }
 
         .answerBtn-draggable-2,
         .answerBtn-draggable-9 {
             left: auto;
-            right: vw(260);
+            right: vw(130);
+            @include media(tablet){
+                right: vw(260);
+            }
         }
     }
 
@@ -205,18 +204,28 @@ header {
         padding: vw(20);
         border-radius: 500px;
         border: 0;
-        width: vw(180);
-        height: vw(180);
+        width: vw(340);
+        height: vw(340);
+        @include media(tablet){
+            width: vw(180);
+            height: vw(180);
+        }
         cursor: grab;
         position: relative;
 
         h4 {
-            font-size: vw(30);
+            font-size: vw(60);
+            @include media(tablet){
+                font-size: vw(30);
+            }
             line-height: 1.1;
         }
 
         p {
-            font-size: vw(18);
+            font-size: vw(32);
+            @include media(tablet){
+                font-size: vw(18);
+            }
             line-height: 1.2;
         }
 
@@ -276,18 +285,23 @@ header {
             margin-bottom: vw(20);
         }
         .skillBox{
-            margin: vw(50) 0 vw(10);
+            margin: vw(80) 0 vw(20);
+            @include media(tablet){
+                margin: vw(50) 0 vw(10);
+            }
 
             dl {
                 display: flex;
                 justify-content: center;
                 flex-wrap: wrap;
-                width: 80%;
                 margin: auto;
+                @include media(tablet){
+                    width: 80%;
+                }
             }
 
             dt {
-                width: 20%;
+                width: 6em;
                 margin-bottom: 10px;
                 text-align: right;
                 font-weight: 700;
@@ -298,7 +312,7 @@ header {
             }
 
             dd {
-                width: 75%;
+                width: calc(100% - 7em);
                 margin: 0 0 10px .5em;
                 text-align: left;
             }
@@ -309,14 +323,20 @@ header {
         &Key,
         &Accent{
             color: #fff;
-            font-size: vw(18);
+            font-size: vw(36);
+            @include media(tablet){
+                font-size: vw(18);
+            }
             font-weight: 700;
             line-height: 1;
             text-decoration: none;
             cursor: pointer;
 
             display: inline-block;
-            padding: vw(16) vw(32);
+            padding: vw(32) vw(64);
+            @include media(tablet){
+                padding: vw(16) vw(32);
+            }
             border: 0;
             border-radius: 500px;
             background: var(--color-key);
